@@ -26,13 +26,12 @@ import org.osm2world.core.math.*;
 import org.osm2world.core.math.algorithms.FaceDecompositionUtil;
 import org.osm2world.core.math.shapes.PolygonShapeXZ;
 import org.osm2world.core.math.shapes.PolylineXZ;
-import org.osm2world.core.math.shapes.ShapeXZ;
-import org.osm2world.core.target.Target;
 import org.osm2world.core.target.common.material.Material;
 import org.osm2world.core.target.common.material.TextureDataDimensions;
 import org.osm2world.core.target.common.material.TextureLayer;
 import org.osm2world.core.target.common.texcoord.NamedTexCoordFunction;
 import org.osm2world.core.target.common.texcoord.TexCoordFunction;
+import org.osm2world.core.world.data.ProceduralWorldObject;
 
 /**
  * a simplified representation of a wall as a 2D plane, with its origin in the bottom left corner.
@@ -72,7 +71,7 @@ public class WallSurface {
 		if (lowerBoundaryXYZ.size() < 2)
 			throw new IllegalArgumentException("need at least two points in the lower boundary");
 		if (upperBoundaryXYZ.size() < 2)
-			throw new IllegalArgumentException("need at least two ponts in the upper boundary");
+			throw new IllegalArgumentException("need at least two points in the upper boundary");
 
 		/* TODO: check for other problems, e.g. intersecting lower and upper boundary,
 		   last points of the boundaries having different x values in wall surface coords, ... */
@@ -139,17 +138,26 @@ public class WallSurface {
 
 	/** adds an element to the wall, unless the necessary space on the wall is already occupied */
 	public void addElementIfSpaceFree(WallElement element) {
+		addElementsIfSpaceFree(List.of(element));
+	}
 
-		if (!wallOutline.contains(element.outline())) {
-			return;
+	/**
+	 * performs the equivalent of {@link #addElementIfSpaceFree(WallElement)} for multiple elements.
+	 * Assumes that the new elements do not intersect with each other.
+	 */
+	public void addElementsIfSpaceFree(Collection<? extends WallElement> elements) {
+
+		List<WallElement> elementsToAdd = new ArrayList<>(elements.size());
+
+		for (WallElement element : elements) {
+			if (wallOutline.contains(element.outline())
+				&& this.elements.stream().noneMatch(e ->
+					e.outline().intersects(element.outline()) || e.outline().contains(element.outline()))) {
+				elementsToAdd.add(element);
+			}
 		}
 
-		boolean spaceOccupied = elements.stream().anyMatch(e ->
-				e.outline().intersects(element.outline()) || e.outline().contains(element.outline()));
-
-		if (!spaceOccupied) {
-			elements.add(element);
-		}
+		this.elements.addAll(elementsToAdd);
 
 	}
 
@@ -158,44 +166,39 @@ public class WallSurface {
 	 *
 	 * @param textureOrigin  the origin of the texture coordinates on the wall surface
 	 * @param windowHeight  the height for window textures will be replaced with this value if it's non-null
-	 * @param renderElements  whether the {@link WallElement}s inserted into this surface should also be rendered
 	 */
-	public void renderTo(Target target, VectorXZ textureOrigin,
-			boolean applyWindowTexture, Double windowHeight, boolean renderElements) {
+	public void renderTo(ProceduralWorldObject.Target target, VectorXZ textureOrigin,
+			boolean applyWindowTexture, Double windowHeight, String... attachmentTypes) {
 
 		/* render the elements on the wall */
 
-		if (renderElements) {
-			for (WallElement e : elements) {
-				e.renderTo(target, this);
-			}
+		for (WallElement e : elements) {
+			e.renderTo(target, this);
 		}
 
 		/* draw insets around the elements */
 
-		if (renderElements) {
-			for (WallElement e : elements) {
-				if (e.insetDistance() > 0) {
+		for (WallElement e : elements) {
+			if (e.insetDistance() > 0) {
 
-					PolygonXYZ frontOutline = convertTo3D(e.outline());
-					PolygonXYZ backOutline = frontOutline.add(normalAt(e.outline().getCentroid()).mult(-e.insetDistance()));
+				PolygonXYZ frontOutline = convertTo3D(e.outline());
+				PolygonXYZ backOutline = frontOutline.add(normalAt(e.outline().getCentroid()).mult(-e.insetDistance()));
 
-					List<VectorXYZ> vsWall = createTriangleStripBetween(
-							backOutline.vertices(), frontOutline.vertices());
+				List<VectorXYZ> vsWall = createTriangleStripBetween(
+						backOutline.vertices(), frontOutline.vertices());
 
-					Material material = this.material;
-					// TODO attempt to simulate ambient occlusion with a different baked ao texture?
+				Material material = this.material;
+				// TODO attempt to simulate ambient occlusion with a different baked ao texture?
 
-					target.drawTriangleStrip(material, vsWall,
-							texCoordLists(vsWall, material, NamedTexCoordFunction.STRIP_WALL));
+				target.drawTriangleStrip(material, vsWall,
+						texCoordLists(vsWall, material, NamedTexCoordFunction.STRIP_WALL));
 
-				}
 			}
 		}
 		
 		/* decompose and triangulate the empty wall surface */
 
-		List<SimplePolygonXZ> holes = elements.stream().map(WallElement::outline).collect(toList());
+		List<SimplePolygonXZ> holes = elements.stream().map(WallElement::outline).toList();
 
 		AxisAlignedRectangleXZ bbox = wallOutline.boundingBox();
 		double minZ = bbox.minZ;
@@ -203,20 +206,13 @@ public class WallSurface {
 		List<LineSegmentXZ> verticalLines = lowerBoundary.stream()
 				.limit(lowerBoundary.size() - 1).skip(1) // omit first and last point
 				.map(p -> new LineSegmentXZ(new VectorXZ(p.x, minZ - 1.0), new VectorXZ(p.x, maxZ + 1.0)))
-				.collect(toList());
+				.toList();
 
-		List<ShapeXZ> shapes = new ArrayList<>(holes);
-		shapes.addAll(verticalLines);
-
-		Collection<? extends PolygonShapeXZ> faces = shapes.isEmpty()
+		Collection<? extends PolygonShapeXZ> faces = holes.isEmpty() && verticalLines.isEmpty()
 				? singletonList(wallOutline)
-				: FaceDecompositionUtil.splitPolygonIntoFaces(wallOutline, shapes);
+				: FaceDecompositionUtil.splitPolygonIntoFaces(wallOutline, holes, verticalLines);
 
-		if (!holes.isEmpty()) {
-			faces.removeIf(f -> holes.stream().anyMatch(hole -> hole.contains(f.getPointInside())));
-		}
-
-		List<TriangleXZ> triangles = faces.stream().flatMap(f -> f.getTriangulation().stream()).collect(toList());
+		List<TriangleXZ> triangles = faces.stream().flatMap(f -> f.getTriangulation().stream()).toList();
 		List<TriangleXYZ> trianglesXYZ = triangles.stream().map(t -> convertTo3D(t)).collect(toList());
 
 		/* determine the material depending on whether a window texture should be applied */
@@ -257,7 +253,9 @@ public class WallSurface {
 
 		/* render the wall */
 
+		target.setCurrentAttachmentTypes(attachmentTypes);
 		target.drawTriangles(material, trianglesXYZ, texCoordLists);
+		target.setCurrentAttachmentTypes();
 
 	}
 
